@@ -174,6 +174,11 @@ At the moment, Capybara supports Webdriver, also called Selenium 2.0, *not*
 Selenium RC. Provided Firefox is installed, everything is set up for you, and
 you should be able to start using Selenium right away.
 
+By default Capybara tried to synchronize AJAX requests, so it will wait for
+AJAX requests to finish after you've interacted with the page. You can switch
+off this behaviour by setting the driver option <tt>:resynchronize</tt> to
+<tt>false</tt>. See the section on configuring drivers.
+
 == Celerity
 
 Celerity only runs on JRuby, so you'll need to install the celerity gem under
