@@ -25,9 +25,14 @@ $(function() {
     }, 500);
   });
   $('#with_focus_event').focus(function() {
-    $('body').append('<p id="focus_event_triggered">Focus Event triggered</p>')
+    $('body').append('<p id="focus_event_triggered">Focus Event triggered</p>');
   });
   $('#checkbox_with_event').click(function() {
-    $('body').append('<p id="checkbox_event_triggered">Checkbox event triggered</p>')
+    $('body').append('<p id="checkbox_event_triggered">Checkbox event triggered</p>');
+  });
+  $('#fire_ajax_request').click(function() {
+    $.ajax({url: "/slow_response", context: document.body, success: function() {
+      $('body').append('<p id="ajax_request_done">Ajax request done</p>');
+    }});
   });
 });
