@@ -34,6 +34,10 @@
     <p>
       <input type="checkbox" id="checkbox_with_event"/>
     </p>
+
+    <p>
+      <input type="submit" id="fire_ajax_request" value="Fire Ajax Request"/>
+    </p>
   </body>
 </html>
 
