@@ -4,7 +4,7 @@ module Capybara
     ##
     # Provides timeout similar to standard library Timeout, but avoids threads
     #
-    def timeout(seconds = 1, driver = nil, &block)
+    def timeout(seconds = 1, driver = nil, error_message = nil, &block)
       start_time = Time.now
 
       result = nil
@@ -14,7 +14,7 @@ module Capybara
 
         delay = seconds - (Time.now - start_time)
         if delay <= 0
-          raise TimeoutError
+          raise TimeoutError, error_message || "timed out"
         end
 
         driver && driver.wait_until(delay)
