@@ -7,6 +7,7 @@ describe Capybara::Driver::Selenium do
 
   it_should_behave_like "driver"
   it_should_behave_like "driver with javascript support"
+  it_should_behave_like "driver with resynchronization support"
   it_should_behave_like "driver with frame support"
   it_should_behave_like "driver with support for window switching"
   it_should_behave_like "driver without status code support"
